--- a/src/pages/Edu/Subject/index.less
+++ b/src/pages/Edu/Subject/index.less
@@ -4,23 +4,11 @@
   .subject-btn {
     margin-left: 20px;
   }
-
-  // .sub-subject-row {
-  //   padding-left: 20px;
-  //   height: 40px;
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   background-color: #fff;
-  //   margin-bottom: 1px;
-  //   &:last-child {
-  //     margin-bottom: 0;
-  //   }
-  //   &:hover {
-  //     background-color: #f5f5f5;
-  //   }
-  //   .sub-subject-row-right {
-  //     width: 170px;
-  //   }
-  // }
+  .subject-input{
+    width: 200px;
+    margin-left: 10px;
+  }
+}
+.subject-text{
+  color: red;
 }
