--- a/src/components/Card/index.less
+++ b/src/components/Card/index.less
@@ -1,21 +1,30 @@
+
 .card {
-  width: 100%;
-  background-color: #fff;
-  padding: 12px 20px;
-  border-radius: 4px;
+    border: 1px solid #f0f0f0;
+    background-color: #fff;
+    margin-bottom: 30px;
+    border-radius: 2px;
+    color: rgba(0, 0, 0, 0.65);
+    // width: 300px;
+  }
+  
   .card-header {
     display: flex;
     justify-content: space-between;
-    .card-icon {
-      cursor: pointer;
-    }
+    padding: 10px 20px;
+    height: 80px;
   }
+  
   .card-content {
-    height: 50px;
-    display: flex;
-    align-items: flex-end;
-    > div {
-      width: 100%;
-    }
+    position: relative;
+    height: 30px;
+    padding: 0 20px;
   }
-}
+  
+  .card-footer {
+    height: 30px;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+  }
+  
