--- a/src/pages/Edu/Subject/index.less
+++ b/src/pages/Edu/Subject/index.less
@@ -2,11 +2,12 @@
   background-color: #fff;
   padding: 20px 0;
   
-  .subject-input{
-    width: 200px;
+  .subject-input {
+    width: 40%;
     margin-left: 10px;
   }
 }
-.subject-text{
+// modal对话框会渲染到根元素之外
+.subject-text {
   color: red;
 }
