--- a/src/layout/PrimaryLayout/index.less
+++ b/src/layout/PrimaryLayout/index.less
@@ -31,6 +31,7 @@
   img {
     width: 30px;
     height: 30px;
+    border-radius: 50%;
   }
   span {
     margin: 0 5px 0 10px;
@@ -43,6 +44,7 @@
   h3 {
     margin-top: 10px;
     margin-bottom: 0;
+    font-weight: 700;
   }
 }
 
